--- a/src/barowner/BarOwnerRegister.fxml
+++ b/src/barowner/BarOwnerRegister.fxml
@@ -5,14 +5,37 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="barowner.BarOwnerRegisterController">
-   <children>
-      <Label layoutX="10.0" layoutY="10.0" text="Name of your business:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0" />
-      <TextField fx:id="horecaName" layoutY="36.0" promptText="business name" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="30.0" />
-      <Label layoutX="20.0" layoutY="20.0" text="Business number:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0" />
-      <TextField fx:id="horecaNumber" layoutX="8.0" layoutY="81.0" promptText="business number" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="80.0" />
-      <Label layoutX="8.0" layoutY="111.0" text="phone number:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="110.0" />
-      <TextField fx:id="phoneNumber" layoutX="9.0" layoutY="131.0" promptText="phone number" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="130.0" />
-      <Button fx:id="registerButton" layoutX="57.0" layoutY="161.0" mnemonicParsing="false" text="Register" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="170.0" />
-   </children>
-</AnchorPane>
+<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="barowner.BarOwnerRegisterController">
+   <tabs>
+      <Tab closable="false" text="Register">
+         <content>
+            <AnchorPane prefHeight="203.0" prefWidth="203.0">
+               <children>
+                  <Label layoutX="10.0" layoutY="10.0" text="Name of your business:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0" />
+                  <TextField fx:id="horecaNameR" layoutY="36.0" promptText="business name" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="30.0" />
+                  <Label layoutX="20.0" layoutY="20.0" text="Business number:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0" />
+                  <TextField fx:id="horecaNumberR" layoutX="8.0" layoutY="81.0" promptText="business number" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="80.0" />
+                  <Label layoutX="8.0" layoutY="111.0" text="phone number:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="110.0" />
+                  <TextField fx:id="phoneNumberR" layoutX="9.0" layoutY="131.0" promptText="phone number" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="130.0" />
+                  <Label layoutX="18.0" layoutY="121.0" text="password" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="160.0" />
+                  <PasswordField fx:id="passwordR" layoutX="8.0" layoutY="181.0" promptText="password" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="180.0" />
+                  <Button fx:id="registerButton" layoutX="57.0" layoutY="161.0" mnemonicParsing="false" text="Register" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="220.0" />
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+      <Tab closable="false" text="Login">
+         <content>
+            <AnchorPane prefHeight="203.0" prefWidth="203.0">
+               <children>
+                  <Label layoutX="10.0" layoutY="10.0" text="Name of your business:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0" />
+                  <TextField fx:id="horecaNameL" layoutY="36.0" promptText="business name" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="30.0" />
+                  <Label layoutX="18.0" layoutY="121.0" text="password" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0" />
+                  <PasswordField fx:id="passwordL" layoutX="8.0" layoutY="81.0" promptText="password" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="80.0" />
+                  <Button fx:id="loginButton" layoutX="57.0" layoutY="161.0" mnemonicParsing="false" text="Login" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="220.0" />
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+   </tabs>
+</TabPane>
