--- a/src/visitor/VisitorRegister.fxml
+++ b/src/visitor/VisitorRegister.fxml
@@ -31,10 +31,10 @@
          <content>
             <AnchorPane prefHeight="203.0" prefWidth="203.0">
                <children>
-                  <Label layoutX="10.0" layoutY="10.0" text="Name of your business:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0" />
-                  <TextField fx:id="loginPhoneNrField" layoutY="36.0" promptText="business name" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="30.0" />
-                  <Label layoutX="18.0" layoutY="121.0" text="password" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0" />
-                  <PasswordField fx:id="LoginPassField" layoutX="8.0" layoutY="81.0" promptText="password" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="80.0" />
+                  <Label layoutX="10.0" layoutY="10.0" text="phone number:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0" />
+                  <TextField fx:id="loginPhoneNrField" layoutY="36.0" promptText="phone number..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="30.0" />
+                  <Label layoutX="18.0" layoutY="121.0" text="password:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0" />
+                  <PasswordField fx:id="LoginPassField" layoutX="8.0" layoutY="81.0" promptText="password..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="80.0" />
                   <Button layoutX="57.0" layoutY="161.0" mnemonicParsing="false" onAction="#loginButtonClick" text="Login" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="220.0" />
                </children>
             </AnchorPane>
