--- a/src/visitor/VisitorRegister.fxml
+++ b/src/visitor/VisitorRegister.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -8,7 +11,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<TabPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visitor.VisitorRegisterController">
+<TabPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visitor.VisitorRegisterController">
    <tabs>
       <Tab closable="false" text="Register">
          <content>
@@ -18,11 +21,11 @@
                   <TextField fx:id="firstNameField" layoutY="36.0" promptText="first name..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="30.0" />
                   <Label layoutX="20.0" layoutY="20.0" text="last name:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0" />
                   <TextField fx:id="lastNameField" layoutX="8.0" layoutY="81.0" promptText="last name..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="80.0" />
+                  <Label layoutX="8.0" layoutY="110.0" text="Phone number:" underline="true" />
+                  <TextField fx:id="PhoneNrField" layoutX="8.0" layoutY="127.0" prefHeight="25.0" prefWidth="186.0" promptText="phone number..." />
                   <Label layoutX="8.0" layoutY="152.0" text="password:" underline="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="152.0" />
                   <PasswordField fx:id="PassField" layoutX="8.0" layoutY="176.0" promptText="password..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="176.0" />
                   <Button layoutX="57.0" layoutY="161.0" mnemonicParsing="false" onAction="#registerButtonClick" text="Register" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="220.0" />
-                  <Label layoutX="8.0" layoutY="110.0" text="Phone number:" underline="true" />
-                  <TextField fx:id="PhoneNrField" layoutX="8.0" layoutY="127.0" prefHeight="25.0" prefWidth="186.0" promptText="phone number..." />
                </children>
             </AnchorPane>
          </content>
